# webcorn

./: .gitignore  LICENSE  README.md  README_zh.md  app.py  index.html  package-lock.json  package.json  replacejs.js  replacepy.js  rollup.config.js  rollup.config.mjs  worker.rollup.config.js  worker.rollup.config.mjs  zipit.js
docs/: index.html  sw.mjs
docs/playground/: index.html  loading.html  sw.js  sw.mjs
docs/playground/project_django/: django.html  django.js  django.mjs
docs/playground/project_fastapi/: fastapi.html  fastapi.js  fastapi.mjs
docs/playground/project_flask/: flask.html  flask.js  flask.mjs
docs/playground/project_wagtail/: wagtail.html  wagtail.js  wagtail.mjs
docs/project_fastapi/: fastapi.mjs
docs/project_flask/: flask.html
docs/project_wagtail/: wagtail.mjs
example/webcorn-playground/: package-lock.json  package.json  rollup.config.mjs  start.py
example/webcorn-playground/deployment/: index.html  sw.mjs
example/webcorn-playground/public/: django.html  fastapi.html  flask.html  index.html  style.css  wagtail.html
example/webcorn-playground/public/project_django/: pyproject.toml
example/webcorn-playground/public/project_django/project_django/: settings.py
example/webcorn-playground/src/: django.js  fastapi.js  flask.js  sw.js  wagtail.js
fryapp/: index.html
public/: asgi.py  index.html  webcorn.py  wsgi.py
public/project_asgi/src/: app.py
public/project_django/: pyproject.toml
public/project_django/project_django/: settings.py
public/project_wsgi/src/: app.py
public/server/: index.html  webcorn.py
public/webcorn/: server.html
src/: asgi.js  main.py  server.html  server.js  service-worker.js  sw.js  webcorn-server.js  webcorn.js  webcorn.py  worker.js  wsgi.js
sw/: index.html  sw.js
tests/basic/: app.py  copy.py  get.py  start.py
tests/basic/templates/: index.html
tests/comlink/: package.json  rollup.config.js
tests/comlink/src/: worker.js
tests/django_app/: app.py  package-lock.json  package.json  rollup.config.mjs  start.py
tests/fastapi_app/: app.py  package-lock.json  package.json  rollup.config.mjs  start.py
tests/fastapi_app/public/project_fastapi/: pyproject.toml
tests/fastapi_app/public/project_fastapi/src/: app.py
tests/flask_app/: app.py  package-lock.json  package.json  rollup.config.mjs  start.py
tests/fs/: package.json
tests/pydantic/: index.html
tests/wagtail_app/: app.py  package-lock.json  package.json  rollup.config.mjs  start.py
(+39 files in other folders)
