[project]
name = "project_django"
version = "0.1.0"
keywords = [
    "project_django",
    "webcorn",
    "wsgi",
]
authors = [{name="Zenk Ju", email="juzejian@gmail.com"},]
description = "A django sample project that will run in a browser"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django",
]

[project.urls]
Homepage = "https://github.com/frybox/webcorn"
"Bug Tracker" = "https://github.com/frybox/webcorn/issues"
Source = "https://github.com/frybox/webcorn"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

