[project]
name = "project_fastapi"
version = "0.1.0"
keywords = [
    "project_fastapi",
    "webcorn",
    "asgi",
]
authors = [{name="Zenk Ju", email="juzejian@gmail.com"},]
description = "A fastapi sample project that will run in a browser"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "asgiref",
]

[project.urls]
Homepage = "https://github.com/frybox/webcorn"
"Bug Tracker" = "https://github.com/frybox/webcorn/issues"
Source = "https://github.com/frybox/webcorn"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

